--- a/Watersheds/Watershed Delineator.Rmd
+++ b/Watersheds/Watershed Delineator.Rmd
@@ -30,7 +30,7 @@ library(nhdplusTools) #<https://doi-usgs.github.io/nhdplusTools/>
 #### Enter the file path where delineated watersheds will be saved. Output file path must be unique for tool to run and won't overwrite existing files.
 
 ```{r}
-export <- "C:/Users/athomps/OneDrive - Oregon/Desktop/New folder/willytest2.shp"
+export <- "H:/Personal_Working_Folders/AThompson/WatershedToolComparison2026/NewToolOutput/New_Delin_All.shp"
 
 if (file.exists(export)) {
   print("❌ The file already exists. Rename output file or delete existing file.")
@@ -60,7 +60,8 @@ import <- st_read("C:/Users/athomps/OneDrive - Oregon/Desktop/New folder/willy.s
 ## OPTION C - *STATIONS DATABASE*
 
 ```{r}
-import <- query_stations(mlocs = c("21848-ORDEQ","10404-ORDEQ","ODFW-10662")) #<--Enter desired MLocIDs in quotes separated by commas
+import <- query_stations(mlocs = c("103KLCMSR","103PS0281","103STCNSR","103WER029","103WER030","105FC1297","105BVCAGC","105FS0416","105TMCACC","105FS0425","105FS0428","105PS0083","105PS0275","105WLCABC","107GWCAPC","107WER092","505PS0110","526CE0061","526PS0076","526PS1612","639PS1279","641OWC157","526PNCAMF","505BMCMCR","13138-ORDEQ","13139-ORDEQ","38560-ORDEQ","dfw_1949","dfw_39708","dfw_588","dfw_6104","dfw_62666","12522-ORDEQ","33420-ORDEQ","10681-ORDEQ","10728-ORDEQ","12266-ORDEQ","12313-ORDEQ","12710-ORDEQ","12868-ORDEQ","13082-ORDEQ","31482-ORDEQ","30357-ORDEQ","28974-ORDEQ","37744-ORDEQ","32060-ORDEQ","32513-ORDEQ","23862-ORDEQ","35772-ORDEQ","21854-ORDEQ","31485-ORDEQ","31480-ORDEQ","21876-ORDEQ","28336-ORDEQ","28971-ORDEQ","33091-ORDEQ","37743-ORDEQ","11489-ORDEQ","29871-ORDEQ","29872-ORDEQ","28474-ORDEQ","10344-ORDEQ","10640-ORDEQ","26803-ORDEQ","30361-ORDEQ","25778-ORDEQ","31639-ORDEQ","35720-ORDEQ","24455-ORDEQ","24416-ORDEQ","30343-ORDEQ","38541-ORDEQ","38664-ORDEQ","28083-ORDEQ","28328-ORDEQ","24568-ORDEQ","24567-ORDEQ","38612-ORDEQ","33087-ORDEQ","37434-ORDEQ","12547-ORDEQ","30367-ORDEQ","30331-ORDEQ","17048-ORDEQ","35739-ORDEQ","35738-ORDEQ","21821-ORDEQ","31396-ORDEQ","13200-ORDEQ","13231-ORDEQ","24040-ORDEQ","33088-ORDEQ","30344-ORDEQ","33089-ORDEQ","38613-ORDEQ","28977-ORDEQ","12550-ORDEQ","35624-ORDEQ","33886-ORDEQ","30405-ORDEQ","23901-ORDEQ","35731-ORDEQ","38606-ORDEQ","30360-ORDEQ","12026-ORDEQ","29870-ORDEQ","33488-ORDEQ","33525-ORDEQ","29874-ORDEQ","14008-ORDEQ","35770-ORDEQ","30339-ORDEQ","25402-ORDEQ","26929-ORDEQ","35634-ORDEQ","11386-ORDEQ","10555-ORDEQ","33482-ORDEQ","25780-ORDEQ","38552-ORDEQ","12022-ORDEQ","33512-ORDEQ","23864-ORDEQ","25385-ORDEQ","26861-ORDEQ","29987-ORDEQ","24432-ORDEQ","38561-ORDEQ","26887-ORDEQ","10404-ORDEQ","37795-ORDEQ","37796-ORDEQ","24061-ORDEQ","33485-ORDEQ","29989-ORDEQ","25356-ORDEQ","21871-ORDEQ","38549-ORDEQ","25628-ORDEQ","10405-ORDEQ","37797-ORDEQ","22985-ORDEQ","12005-ORDEQ","23096-ORDEQ","10406-ORDEQ","37745-ORDEQ","33858-ORDEQ","21874-ORDEQ","34467-ORDEQ","12518-ORDEQ","34521-ORDEQ","17122-ORDEQ","37177-ORDEQ","34662-ORDEQ","11263-ORDEQ","38116-ORDEQ","29905-ORDEQ","33339-ORDEQ","33344-ORDEQ","38124-ORDEQ","33347-ORDEQ","35745-ORDEQ","29900-ORDEQ","13226-ORDEQ","34658-ORDEQ","38123-ORDEQ","33337-ORDEQ","33340-ORDEQ","17090-ORDEQ","12339-ORDEQ","38132-ORDEQ","33341-ORDEQ","26819-ORDEQ","33348-ORDEQ","34722-ORDEQ","38122-ORDEQ","35787-ORDEQ","32575-ORDEQ","38121-ORDEQ","32594-ORDEQ","12520-ORDEQ","11851-ORDEQ","13263-ORDEQ","28046-ORDEQ","34639-ORDEQ","38151-ORDEQ","38152-ORDEQ","21791-ORDEQ","38120-ORDEQ","37151-ORDEQ","12299-ORDEQ","33345-ORDEQ","33334-ORDEQ","37150-ORDEQ","37164-ORDEQ","37152-ORDEQ","34649-ORDEQ","33319-ORDEQ","29891-ORDEQ","23821-ORDEQ","37170-ORDEQ","37153-ORDEQ","37163-ORDEQ","37156-ORDEQ","37155-ORDEQ","37161-ORDEQ","33320-ORDEQ","38118-ORDEQ","37185-ORDEQ","37169-ORDEQ","23823-ORDEQ","37159-ORDEQ","37158-ORDEQ","37154-ORDEQ","37157-ORDEQ","37168-ORDEQ","37167-ORDEQ","37166-ORDEQ","23826-ORDEQ","34643-ORDEQ","34642-ORDEQ","37218-ORDEQ","38117-ORDEQ","33322-ORDEQ","35688-ORDEQ","33642-ORDEQ","34650-ORDEQ","34671-ORDEQ","12521-ORDEQ","21861-ORDEQ","29906-ORDEQ","33318-ORDEQ","25298-ORDEQ","34667-ORDEQ","38119-ORDEQ","35689-ORDEQ","34670-ORDEQ","21862-ORDEQ","29895-ORDEQ","33418-ORDEQ","35725-ORDEQ","38126-ORDEQ","23827-ORDEQ","33324-ORDEQ","33325-ORDEQ","38159-ORDEQ","38160-ORDEQ","33416-ORDEQ","33327-ORDEQ","34647-ORDEQ","33328-ORDEQ","34646-ORDEQ","12523-ORDEQ","33423-ORDEQ","34712-ORDEQ","26956-ORDEQ","34708-ORDEQ","33330-ORDEQ","34664-ORDEQ","34645-ORDEQ","33333-ORDEQ","34669-ORDEQ","35746-ORDEQ","12134-ORDEQ","34715-ORDEQ","21831-ORDEQ","21825-ORDEQ","33425-ORDEQ","33332-ORDEQ","12139-ORDEQ","33411-ORDEQ","34696-ORDEQ","33415-ORDEQ","34687-ORDEQ","34686-ORDEQ","33421-ORDEQ","33422-ORDEQ","33427-ORDEQ","33428-ORDEQ","33426-ORDEQ","12295-ORDEQ","33414-ORDEQ","33430-ORDEQ","13211-ORDEQ","34717-ORDEQ","33424-ORDEQ","27965-ORDEQ","33412-ORDEQ","33413-ORDEQ","38305-ORDEQ","38304-ORDEQ","12527-ORDEQ","34697-ORDEQ","21795-ORDEQ","33429-ORDEQ","33431-ORDEQ","34716-ORDEQ","21827-ORDEQ","33433-ORDEQ","33435-ORDEQ","12100-ORDEQ","35788-ORDEQ","38291-ORDEQ","34688-ORDEQ","12288-ORDEQ","33407-ORDEQ","12289-ORDEQ","25342-ORDEQ","10441-ORDEQ","10437-ORDEQ","33432-ORDEQ","33410-ORDEQ","34692-ORDEQ","13216-ORDEQ","12294-ORDEQ","28439-ORDEQ","33436-ORDEQ","12302-ORDEQ","33408-ORDEQ","17132-ORDEQ","33409-ORDEQ","38146-ORDEQ","38145-ORDEQ","33434-ORDEQ","34709-ORDEQ","12293-ORDEQ","17029-ORDEQ","13570-ORDEQ","34693-ORDEQ","33405-ORDEQ","38157-ORDEQ","33399-ORDEQ","13574-ORDEQ","34691-ORDEQ","17127-ORDEQ","26829-ORDEQ","38163-ORDEQ","23837-ORDEQ","12137-ORDEQ","21843-ORDEQ","12528-ORDEQ","33400-ORDEQ","38164-ORDEQ","33439-ORDEQ","38154-ORDEQ","27902-ORDEQ","26846-ORDEQ","12526-ORDEQ","33398-ORDEQ","34694-ORDEQ","33403-ORDEQ","33438-ORDEQ","34690-ORDEQ","34689-ORDEQ","34681-ORDEQ","33396-ORDEQ","33397-ORDEQ","24414-ORDEQ","34674-ORDEQ","34679-ORDEQ","34680-ORDEQ","33394-ORDEQ","12297-ORDEQ","21793-ORDEQ","33402-ORDEQ","26827-ORDEQ","33401-ORDEQ","33441-ORDEQ","10996-ORDEQ","33443-ORDEQ","13222-ORDEQ","33378-ORDEQ","10596-ORDEQ","33395-ORDEQ","32483-ORDEQ","26968-ORDEQ","33442-ORDEQ","35701-ORDEQ","29976-ORDEQ","29970-ORDEQ","21826-ORDEQ","12529-ORDEQ","12286-ORDEQ","26834-ORDEQ","32435-ORDEQ","33404-ORDEQ","12287-ORDEQ","33376-ORDEQ","33377-ORDEQ","33380-ORDEQ","34677-ORDEQ","34682-ORDEQ","12285-ORDEQ","21796-ORDEQ","12282-ORDEQ","10451-ORDEQ","34719-ORDEQ","33461-ORDEQ","26851-ORDEQ","33373-ORDEQ","23832-ORDEQ","33381-ORDEQ","34675-ORDEQ","10393-ORDEQ","33390-ORDEQ","33391-ORDEQ","23829-ORDEQ","33392-ORDEQ","33393-ORDEQ","12093-ORDEQ","10442-ORDEQ","33375-ORDEQ","34676-ORDEQ","33374-ORDEQ","33382-ORDEQ","17024-ORDEQ","11485-ORDEQ","25307-ORDEQ","12135-ORDEQ","29980-ORDEQ","11522-ORDEQ","34685-ORDEQ","12590-ORDEQ","17023-ORDEQ","21797-ORDEQ","11486-ORDEQ","33383-ORDEQ","23833-ORDEQ","31729-ORDEQ","24084-ORDEQ","25299-ORDEQ","33385-ORDEQ","24421-ORDEQ","33445-ORDEQ","33444-ORDEQ","10443-ORDEQ","34714-ORDEQ","33459-ORDEQ","21830-ORDEQ","32556-ORDEQ","32149-ORDEQ","29918-ORDEQ","10533-ORDEQ","11905-ORDEQ","33368-ORDEQ","33370-ORDEQ","20392-ORDEQ","20394-ORDEQ","33384-ORDEQ","33446-ORDEQ","33447-ORDEQ","29975-ORDEQ","32555-ORDEQ","32554-ORDEQ","35792-ORDEQ","33367-ORDEQ","26830-ORDEQ","34684-ORDEQ","33372-ORDEQ","33371-ORDEQ","33387-ORDEQ","29921-ORDEQ","26828-ORDEQ","21824-ORDEQ","32553-ORDEQ","35793-ORDEQ","34699-ORDEQ","34683-ORDEQ","23830-ORDEQ","30404-ORDEQ","29966-ORDEQ","21828-ORDEQ","34713-ORDEQ","26852-ORDEQ","32486-ORDEQ","12530-ORDEQ","21844-ORDEQ","10997-ORDEQ","11484-ORDEQ","33458-ORDEQ","30426-ORDEQ","35785-ORDEQ","32484-ORDEQ","32485-ORDEQ","32487-ORDEQ","13227-ORDEQ","12531-ORDEQ","35794-ORDEQ","34700-ORDEQ","23831-ORDEQ","21799-ORDEQ","23834-ORDEQ","34470-ORDEQ","26960-ORDEQ","12281-ORDEQ","35722-ORDEQ","33389-ORDEQ","25309-ORDEQ","13198-ORDEQ","18944-ORDEQ","30411-ORDEQ","26854-ORDEQ","34698-ORDEQ","13214-ORDEQ","25348-ORDEQ","13212-ORDEQ","33453-ORDEQ","33454-ORDEQ","35791-ORDEQ","35658-ORDEQ","35637-ORDEQ","35655-ORDEQ","35694-ORDEQ","35727-ORDEQ","33455-ORDEQ","33457-ORDEQ","12532-ORDEQ","13228-ORDEQ","13206-ORDEQ","12271-ORDEQ","35647-ORDEQ","23836-ORDEQ","33449-ORDEQ","33452-ORDEQ","33456-ORDEQ","35663-ORDEQ","35695-ORDEQ","34461-ORDEQ","21849-ORDEQ","35676-ORDEQ","32576-ORDEQ","32577-ORDEQ","26841-ORDEQ","35666-ORDEQ","33450-ORDEQ","33451-ORDEQ","25354-ORDEQ","17049-ORDEQ","35750-ORDEQ","35660-ORDEQ","23840-ORDEQ","13205-ORDEQ","25330-ORDEQ","12099-ORDEQ","35648-ORDEQ","35640-ORDEQ","35667-ORDEQ","35753-ORDEQ","12097-ORDEQ","35697-ORDEQ","13264-ORDEQ","12092-ORDEQ","35752-ORDEQ","30408-ORDEQ","13207-ORDEQ","25328-ORDEQ","35751-ORDEQ","17051-ORDEQ","13196-ORDEQ","25335-ORDEQ","23839-ORDEQ","17054-ORDEQ","38155-ORDEQ","38156-ORDEQ","10418-ORDEQ","11493-ORDEQ","35789-ORDEQ","21851-ORDEQ","34471-ORDEQ","29952-ORDEQ","25326-ORDEQ","32586-ORDEQ","32585-ORDEQ","31467-ORDEQ","35643-ORDEQ","10428-ORDEQ","35679-ORDEQ","10423-ORDEQ","35704-ORDEQ","35681-ORDEQ","21850-ORDEQ","10421-ORDEQ","29955-ORDEQ","12533-ORDEQ","38128-ORDEQ","13218-ORDEQ","23846-ORDEQ","11051-ORDEQ","10602-ORDEQ","29948-ORDEQ","35636-ORDEQ","35715-ORDEQ","11483-ORDEQ","32488-ORDEQ","21814-ORDEQ","32489-ORDEQ","32490-ORDEQ","11482-ORDEQ","29949-ORDEQ","35661-ORDEQ","13209-ORDEQ","13208-ORDEQ","10537-ORDEQ","35790-ORDEQ","21847-ORDEQ","12095-ORDEQ","17016-ORDEQ","26843-ORDEQ","35670-ORDEQ","35668-ORDEQ","35683-ORDEQ","35646-ORDEQ","23842-ORDEQ","29946-ORDEQ","23845-ORDEQ","13219-ORDEQ","21822-ORDEQ","35662-ORDEQ","35641-ORDEQ","35656-ORDEQ","35664-ORDEQ","34477-ORDEQ","34476-ORDEQ","12278-ORDEQ","33151-ORDEQ","12843-ORDEQ","13440-ORDEQ","13501-ORDEQ","12342-ORDEQ","37847-ORDEQ","12786-ORDEQ","12785-ORDEQ","13513-ORDEQ","33277-ORDEQ","23819-ORDEQ","30727-ORDEQ","25318-ORDEQ","37829-ORDEQ","33275-ORDEQ","21805-ORDEQ","37841-ORDEQ","13217-ORDEQ","12515-ORDEQ","37830-ORDEQ","34613-ORDEQ","34629-ORDEQ","34741-ORDEQ","37836-ORDEQ","33273-ORDEQ","21806-ORDEQ","33274-ORDEQ","28033-ORDEQ","38130-ORDEQ","35786-ORDEQ","38131-ORDEQ","34612-ORDEQ","33278-ORDEQ","35682-ORDEQ","34631-ORDEQ","11848-ORDEQ","11769-ORDEQ","10523-ORDEQ","11003-ORDEQ","33272-ORDEQ","11774-ORDEQ","11775-ORDEQ","11770-ORDEQ","12516-ORDEQ","23813-ORDEQ","22504-ORDEQ","21800-ORDEQ","34638-ORDEQ","26959-ORDEQ","23814-ORDEQ","13203-ORDEQ","34633-ORDEQ","26946-ORDEQ","21804-ORDEQ","13195-ORDEQ","33269-ORDEQ","34614-ORDEQ","21803-ORDEQ","25317-ORDEQ","34628-ORDEQ","33364-ORDEQ","33268-ORDEQ","11846-ORDEQ","35742-ORDEQ","33270-ORDEQ","21802-ORDEQ","11241-ORDEQ","33365-ORDEQ","11847-ORDEQ","23825-ORDEQ","34673-ORDEQ","25295-ORDEQ","34657-ORDEQ","33363-ORDEQ","21845-ORDEQ","29898-ORDEQ","34656-ORDEQ","33355-ORDEQ","33361-ORDEQ","33356-ORDEQ","33358-ORDEQ","34655-ORDEQ","10391-ORDEQ","33359-ORDEQ","26818-ORDEQ","33357-ORDEQ","17124-ORDEQ","33846-ORDEQ","33847-ORDEQ","33350-ORDEQ","12312-ORDEQ","25379-ORDEQ","11476-ORDEQ","12327-ORDEQ","12314-ORDEQ","37186-ORDEQ","29907-ORDEQ","37182-ORDEQ","12301-ORDEQ","33354-ORDEQ","33349-ORDEQ","33351-ORDEQ","37180-ORDEQ","37179-ORDEQ","17072-ORDEQ","33644-ORDEQ","34659-ORDEQ","21790-ORDEQ","34663-ORDEQ","10588-ORDEQ","33343-ORDEQ","37181-ORDEQ","37220-ORDEQ","37189-ORDEQ","37174-ORDEQ","37183-ORDEQ","33342-ORDEQ","33312-ORDEQ","34632-ORDEQ","10521-ORDEQ","34624-ORDEQ","29938-ORDEQ","33300-ORDEQ","21807-ORDEQ","33310-ORDEQ","34635-ORDEQ","33313-ORDEQ","23815-ORDEQ","33298-ORDEQ","13121-ORDEQ","33297-ORDEQ","29937-ORDEQ","12328-ORDEQ","29940-ORDEQ","34618-ORDEQ","34619-ORDEQ","21810-ORDEQ","33299-ORDEQ","12513-ORDEQ","33290-ORDEQ","34620-ORDEQ","34625-ORDEQ","33291-ORDEQ","12514-ORDEQ","25377-ORDEQ","29933-ORDEQ","33294-ORDEQ","34615-ORDEQ","33302-ORDEQ","25323-ORDEQ","21808-ORDEQ","21809-ORDEQ","34621-ORDEQ","33306-ORDEQ","24413-ORDEQ","29942-ORDEQ","29941-ORDEQ","34626-ORDEQ","33303-ORDEQ","11849-ORDEQ","33307-ORDEQ","33304-ORDEQ","33305-ORDEQ","11856-ORDEQ","34623-ORDEQ","35741-ORDEQ","24984-ORDEQ","33308-ORDEQ","13265-ORDEQ","25322-ORDEQ","34721-ORDEQ","35744-ORDEQ","33292-ORDEQ","11844-ORDEQ","25386-ORDEQ","12818-ORDEQ","33309-ORDEQ","23818-ORDEQ","34634-ORDEQ","37281-ORDEQ","13224-ORDEQ","33293-ORDEQ","17155-ORDEQ","35693-ORDEQ","34616-ORDEQ","18783-ORDEQ","34627-ORDEQ","11843-ORDEQ","21813-ORDEQ","13411-ORDEQ","37835-ORDEQ","13223-ORDEQ","13204-ORDEQ","34636-ORDEQ","37832-ORDEQ","37846-ORDEQ","33289-ORDEQ","12279-ORDEQ","37838-ORDEQ","37843-ORDEQ","34630-ORDEQ","33284-ORDEQ","33283-ORDEQ","37828-ORDEQ","33287-ORDEQ","37842-ORDEQ","13532-ORDEQ","13416-ORDEQ","13225-ORDEQ","37840-ORDEQ","23816-ORDEQ","33281-ORDEQ","37831-ORDEQ","21811-ORDEQ","33286-ORDEQ","20363-ORDEQ","33288-ORDEQ","13421-ORDEQ","12787-ORDEQ","12781-ORDEQ","37844-ORDEQ","11845-ORDEQ","37837-ORDEQ","34637-ORDEQ","21812-ORDEQ","33282-ORDEQ","37280-ORDEQ","37845-ORDEQ","37834-ORDEQ","25319-ORDEQ","13485-ORDEQ","13483-ORDEQ","13433-ORDEQ","13424-ORDEQ","37839-ORDEQ","26860-ORDEQ","21869-ORDEQ","29890-ORDEQ","11087-ORDEQ","37781-ORDEQ","12711-ORDEQ","24071-ORDEQ","25784-ORDEQ","23858-ORDEQ","35730-ORDEQ","33906-ORDEQ","24437-ORDEQ","37798-ORDEQ","37794-ORDEQ","37793-ORDEQ","37792-ORDEQ","13137-ORDEQ","35857-ORDEQ","35625-ORDEQ","23913-ORDEQ","35719-ORDEQ","21873-ORDEQ","37791-ORDEQ","29869-ORDEQ","30318-ORDEQ","30625-ORDEQ","30352-ORDEQ","24442-ORDEQ","37742-ORDEQ","33854-ORDEQ","10792-ORDEQ","33834-ORDEQ","25374-ORDEQ","23849-ORDEQ","30624-ORDEQ","31354-ORDEQ","35767-ORDEQ","30623-ORDEQ","31387-ORDEQ","23919-ORDEQ","38555-ORDEQ","38547-ORDEQ","25378-ORDEQ","24068-ORDEQ","35846-ORDEQ","26799-ORDEQ","29029-ORDEQ","33519-ORDEQ","10350-ORDEQ","12601-ORDEQ","12597-ORDEQ","12205-ORDEQ","26797-ORDEQ","29868-ORDEQ","21816-ORDEQ","21817-ORDEQ","21818-ORDEQ","35766-ORDEQ","24453-ORDEQ","26793-ORDEQ","31484-ORDEQ","37801-ORDEQ","13284-ORDEQ","37799-ORDEQ","35853-ORDEQ","10373-ORDEQ","33521-ORDEQ","10352-ORDEQ","11180-ORDEQ","33506-ORDEQ","10366-ORDEQ","12553-ORDEQ","24066-ORDEQ","30422-ORDEQ","24060-ORDEQ","35845-ORDEQ","21834-ORDEQ","23922-ORDEQ","23899-ORDEQ","23908-ORDEQ","21835-ORDEQ","35729-ORDEQ","35780-ORDEQ","33859-ORDEQ","31483-ORDEQ","33887-ORDEQ","29991-ORDEQ","23911-ORDEQ","24044-ORDEQ","26888-ORDEQ","26798-ORDEQ","29875-ORDEQ","33892-ORDEQ","33888-ORDEQ","25359-ORDEQ","22947-ORDEQ","21864-ORDEQ","35717-ORDEQ","38543-ORDEQ","24438-ORDEQ","25387-ORDEQ","37802-ORDEQ","25782-ORDEQ","23863-ORDEQ","26863-ORDEQ","12559-ORDEQ","35716-ORDEQ","24058-ORDEQ","25360-ORDEQ","25274-ORDEQ","10812-ORDEQ","31400-ORDEQ","12343-ORDEQ","31409-ORDEQ","30356-ORDEQ","10817-ORDEQ","12187-ORDEQ","11904-ORDEQ","30327-ORDEQ","30342-ORDEQ","12317-ORDEQ","12315-ORDEQ","12316-ORDEQ","30321-ORDEQ","31384-ORDEQ","30621-ORDEQ","31386-ORDEQ","12319-ORDEQ","12318-ORDEQ","12320-ORDEQ","11434-ORDEQ","31401-ORDEQ","13197-ORDEQ","31357-ORDEQ","13221-ORDEQ","31374-ORDEQ","31390-ORDEQ","30349-ORDEQ","31405-ORDEQ","31407-ORDEQ
+)) #<--Enter desired MLocIDs in quotes separated by commas
 ```
 
 # **5 - CREATE COMID DATAFRAME**
